--- a/lab3/CMakeLists.txt
+++ b/lab3/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_CXX_COMPILER "g++")
 
 if (UNIX)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++23")
-endif (unix)
+endif (UNIX)
 if (WIN32)
     # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++23")
     set(CMAKE_CXX_STANDARD 23)
